--- a/build.xml
+++ b/build.xml
@@ -26,7 +26,7 @@
   THE SOFTWARE.
 -->
 
-<project basedir="" default="devReleaseModule" name="STREAMPreprocess">
+<project basedir="" default="devReleaseModule" name="STREAM.Preprocess">
     <property name="dirOffset" value="../../common_module_code" />
     <import file="${dirOffset}/commontargets.xml" />
 
